--- a/react-app/src/components/RoutineFormModal/RoutineFormModal.css
+++ b/react-app/src/components/RoutineFormModal/RoutineFormModal.css
@@ -4,16 +4,29 @@
 }
 
 .create-routine-container{
-    max-height: 90vh;
-    height:85vh;
+    max-height: 95vh;
       display: flex;
   flex-direction: column;
 align-items: center;
-  /* justify-content: space-between; */
-  justify-content: center;
+  /* justify-content: center; */
   margin: 0 auto;
   max-width: 95%;
+  overflow-y: scroll;
 }
+
+
+@media (max-width: 1400px) {
+  .create-routine-container {
+  height: 90vh;
+  }
+}
+
+@media (min-width: 1401px) {
+  .create-routine-container {
+    height: 85vh;
+  }
+}
+
 
 /* reused lotssssssss of places */
 .selected{
@@ -32,17 +45,57 @@ align-items: center;
 }
 
 /* general h2/h3 rules */
+
 .create-routine-container h2{
-  font-size: 2.5em;
-  margin: 10px;
+  font-size: 2.8em;
   text-align: center;
 }
 
+.create-routine-container h2:not(.newyou){
+  margin: 10px;
+}
+
 .create-routine-container h3{
-  margin-top:0;
-  font-size: 1.6em;
+  margin:0 0 .5em 0;
+  font-size: 1.8em;
     text-align: center;
 }
+
+.create-routine-container h5{
+    font-size: 1.3em;
+    text-align: center;
+    margin: .7em 0 .2em 0;
+}
+
+@media (min-width: 1424px) {
+    .create-routine-container h2 {
+    font-size: 4em;
+  }
+  .create-routine-container h3 {
+    font-size: 2.5em;
+  }
+  .create-routine-container h5{
+    font-size: 1.8em;
+    text-align: center;
+    margin: 1em 0 .4em 0;
+}
+  .create-routine-container p{
+    font-size:1.3em;
+  }
+}
+
+@media (max-width: 1423px) {
+  .create-routine-container h3 {
+    font-size: 2em;
+  }
+}
+
+@media (max-width: 1423px) {
+  .create-routine-container h3 {
+    font-size: 1.8em;
+  }
+}
+
 @media (max-width: 1024px) {
   .create-routine-container h3 {
     font-size: 1.4em;
@@ -71,6 +124,7 @@ margin: 5% 10%;
   padding-bottom: 120px;
   max-height: 90%;
   overflow-y:scroll;
+    /* justify-content: center; */
 }
 
 .button-container{
@@ -94,11 +148,38 @@ margin: 5% 10%;
 .start input{
   width: 95%;
     height: 30px;
-    margin: 1em auto;
         box-shadow: 5px 6px #350079;
      border: 1px solid  #E8DEF8;
+}
+
+ @media (max-width: 1400px) {
+  .start input{
+    margin: 1em auto;
         font-size: 1em;
 }
+}
+@media (min-width: 1401px) {
+  .newyou{
+margin:80px 10px 10px 10px;
+text-align: center;
+}
+  .start input{
+    margin: 1.3em auto;
+        font-size: 1.3em;
+}
+ }
+
+ @media (max-width: 1401px) {
+  .newyou{
+margin:25px 10px 10px 10px;
+text-align: center;
+}
+  .start input{
+    margin: 1.3em auto;
+        font-size: 1.3em;
+}
+ }
+
 .start input:focus {
     outline: 2px solid  #CDAEFF;
 }
@@ -113,7 +194,7 @@ margin: 5% 10%;
   display:flex;
   flex-direction: column;
  align-items: center;
- padding: 1em 0;
+ padding: 1.3em 0 2em 0;
 }
 
 .start p{
@@ -131,6 +212,7 @@ margin: 5% 10%;
 .go img{  /* this has to be here because this icon is smaller than the .help icon for visual balance */
   margin: 9px 0;
 }
+
 
 /* step 2 */
 .topics-container{
@@ -168,7 +250,7 @@ margin: 1%;
 
 .bigtopic-tiles {
   display: flex;
-  margin-top: 10%;
+  margin-top: 5%;
  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
