--- a/react-app/src/components/CheckInModal/CheckInModal.css
+++ b/react-app/src/components/CheckInModal/CheckInModal.css
@@ -1,39 +1,57 @@
 #modal-content:has(.checkin-form-container){
-    /* background-color: #F8F3FF; */
     width: 45%;
-    /* min-height: 55vh;
-    max-height: 75vh; */
+    height:70vh;
             box-shadow: 7px 9px #350079;
+
 }
 
 .checkin-form-container{
- padding: 5%;
+ width: 90%;
+  padding: 5%;
+ perspective: 1000px;
+    display: flex;
+    flex-direction: column;
 }
 
 .checkin-form-container h2{
  font-size: 2em;
-       display: flex;
-        justify-content: center;
-    align-items: center;
-}
-.habit-steps-container {
-  display: flex;
-  overflow-x: auto;
-  white-space: nowrap;
+ text-align: center;
 }
 
+/* carousel */
+.habit-steps-container {
+    width: 100%;
+  height: 100%;
+  /* position: absolute; */
+  transform-style: preserve-3d;
+  /* next two lines made horizantal scroll (before switched to carousel) */
+  /* overflow-x: auto;
+  white-space: nowrap; */
+display: flex;
+  justify-content: center;
+  align-content: center;
+}
+
+/* card */
 .checkin-step {
-  flex: 0 0 auto;
-  width: 70%;
-  margin-right: 16px;
+    display: block;
+  position: absolute;
+  margin:20px;
   padding: 16px;
   border: 1px solid #ddd;
   border-radius: 20px;
   background-color: #f9f9f9;
+    /* width: 186px;
+  height: 116px; */
+   /* transform-origin: center center; */
+  transition: transform 1s ease, opacity 0.8s ease;
+  opacity: 0.8;
+  z-index:2;
 }
-.habitsss{
-    max-height:60vh;
-    overflow-y: auto;
+
+.checkin-step.current {
+  z-index: 5;
+  opacity: 1;
 }
 
 .desc{
@@ -52,9 +70,10 @@
 }
 
 .sub{
-         margin: 6%;
-                 display: flex;
-        -content: center;
+         margin-top: 45vh;
+               display: flex;
+        justify-content: center;
+
 }
 
 .sub button{
