--- a/react-app/src/components/CheckInModal/CheckInModal.css
+++ b/react-app/src/components/CheckInModal/CheckInModal.css
@@ -1,12 +1,12 @@
 #modal-content:has(.checkin-form-container){
-    width: 45%;
-    height:70vh;
+    min-width:55%;
+    height:75vh;
             box-shadow: 7px 9px #350079;
 
 }
 
 .checkin-form-container{
- width: 90%;
+ /* width: 90%; */
   padding: 5%;
  perspective: 1000px;
     display: flex;
@@ -30,13 +30,14 @@
 display: flex;
   justify-content: center;
   align-content: center;
+
 }
 
 /* card */
 .checkin-step {
     display: block;
   position: absolute;
-  margin:20px;
+  margin:8vh 0 0 0;
   padding: 16px;
   border: 1px solid #ddd;
   border-radius: 20px;
@@ -45,8 +46,10 @@ display: flex;
   height: 116px; */
    /* transform-origin: center center; */
   transition: transform 1s ease, opacity 0.8s ease;
-  opacity: 0.8;
+  opacity: 0.6;
   z-index:2;
+  max-width:90%;
+  margin-right:10px;
 }
 
 .checkin-step.current {
@@ -55,9 +58,14 @@ display: flex;
 }
 
 .desc{
+  /* min-height: 3em;
+  line-height: 1em; */
         display: flex;
         justify-content: center;
     align-items: center;
+    text-align:center;
+     overflow-wrap: break-word;
+  max-width: 15ch;
 }
 
 .checkin-options{
