--- a/react-app/src/components/CheckInModal/CheckInModal.css
+++ b/react-app/src/components/CheckInModal/CheckInModal.css
@@ -60,7 +60,7 @@ display: flex;
 
 .desc{
   height: 100px;
-  font-size: 12px;
+  /* font-size: 1.5em; */
         display: flex;
         justify-content: center;
     align-items: center;
