--- a/react-app/src/components/RoutineFormModal/RoutineFormModal.css
+++ b/react-app/src/components/RoutineFormModal/RoutineFormModal.css
@@ -1,4 +1,3 @@
-
 #modal-content:has(.create-routine-container){
             box-shadow: 7px 9px #350079;
 }
@@ -23,7 +22,7 @@ align-items: center;
 
 @media (min-width: 1401px) {
   .create-routine-container {
-    height: 85vh;
+    height: 90vh;
   }
 }
 
@@ -69,7 +68,7 @@ align-items: center;
 
 @media (min-width: 1424px) {
     .create-routine-container h2 {
-    font-size: 4em;
+    font-size: 3.8em;
   }
   .create-routine-container h3 {
     font-size: 2.5em;
@@ -160,7 +159,7 @@ margin: 5% 10%;
 }
 @media (min-width: 1401px) {
   .newyou{
-margin:80px 10px 10px 10px;
+margin:2% 10px 10px 10px;
 text-align: center;
 }
   .start input{
@@ -189,8 +188,8 @@ text-align: center;
     box-shadow:  5px 6px#350079;
     max-width: 100%;
   max-height: 100%;
-  width: 45%;
-  height: 80%;
+  width: 40%;
+  height: 70%;
   display:flex;
   flex-direction: column;
  align-items: center;
@@ -463,9 +462,11 @@ text-align: center;
     overflow-x: auto;
   }
 }
+
 .covers img {
+  margin-top:20px;
   max-width: 100%;
-  height: 125px;
+  height: 20vh;
     width: 30%;
   border-radius: 20px;
   object-fit: cover;
