--- a/react-app/src/components/RoutineFormModal/RoutineFormModal.css
+++ b/react-app/src/components/RoutineFormModal/RoutineFormModal.css
@@ -43,26 +43,37 @@ align-items: center;
   color: red;
 }
 
-.confetti {
-  width: 10px;
-  height: 10px;
+
+.confetti-container {
   position: absolute;
-  background-color: #f00; /* Confetti color */
-  animation: confetti-burst 0.5s ease-out;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+    /* top: 70%;
+  left: 50%; */
+}
+
+.confetti {
+  width: 6px;
+  height: 6px;
+  position: absolute;
+  background-color: #058789;
+  animation: confetti-burst 0.7s ease-out;
 }
 
 @keyframes confetti-burst {
   0% {
-    transform: translateY(0) rotate(0deg);
+    transform: translateY(0) translateX(0) rotate(0deg);
     opacity: 0;
   }
   100% {
-    transform: translateY(-100px) rotate(360deg);
+    transform: translateY(-100%) translateX(100%) rotate(720deg);
     opacity: 1;
   }
 }
-/* general h2/h3 rules */
 
+
+/* general h2/h3 rules */
 .create-routine-container h2{
   font-size: 2.8em;
   text-align: center;
