--- a/react-app/src/components/CheckInModal/CheckInModal.css
+++ b/react-app/src/components/CheckInModal/CheckInModal.css
@@ -1,56 +1,106 @@
 #modal-content:has(.checkin-form-container){
     height:75vh;
             box-shadow: 7px 9px #350079;
-                min-width:35vw;
+                min-width:70vw;
     max-width: 90vw;
 }
 
 
 .checkin-form-container{
-  padding: 3%;
+  padding: 3% 6%;
  perspective: 1000px;
     display: flex;
     flex-direction: column;
+     height:75vh;
+           min-width:65vw;
 }
 
+
+/* general h2/button font rules */
 .checkin-form-container h2{
- font-size: 2.5em;
- text-align: center;
+  font-size: 2.5em;
+  text-align: center;
+}
+
+
+@media (min-width: 1424px) {
+    .checkin-form-container h2 {
+    font-size: 3.8em;
+  }
+  /* .checkin-form-container button {
+    font-size: em;
+  } */
+}
+
+@media (max-width: 1423px) {
+    .checkin-form-container h2 {
+    font-size: 3em;
+  }
+  /* .checkin-form-container button {
+    font-size: 2em;
+  } */
+}
+
+@media (max-width: 1024px) {
+    .checkin-form-container h2 {
+    font-size: 1.4em;
+  }
+  .checkin-form-container button {
+    font-size: 1em;
+  }
+}
+@media (max-width: 768px) {
+    .checkin-form-container h2 {
+    font-size: 1em;
+  }
+  .checkin-form-container button {
+    font-size: .8em;
+  }
+}
+@media (max-width: 480px) {
+     .checkin-form-container h2 {
+    font-size: .8em;
+  }
+  .checkin-form-container button {
+    font-size: .4em;
+  }
 }
 
 /* carousel */
 .habit-steps-container {
     width: 100%;
   height: 100%;
-  /* position: absolute; */
+  display: block;
   transform-style: preserve-3d;
   /* next two lines made horizantal scroll (before switched to carousel) */
   /* overflow-x: auto;
   white-space: nowrap; */
 display: flex;
   justify-content: center;
-  align-content: center;
-
+/* padding:2%; */
+margin:auto;
 }
 
 /* card */
 .checkin-step {
     display: block;
   position: absolute;
-  margin:9vh 0 0 0;
-  padding: 16px;
+  margin:auto;
+  padding: 10px 20px;
   border: 1px solid #ddd;
   border-radius: 20px;
   background-color: #f9f9f9;
-    /* width: 186px;
-  height: 116px; */
-   /* transform-origin: center center; */
+   transform-origin: center center;
   transition: transform 1s ease, opacity 0.8s ease;
   opacity: 0.6;
   z-index:2;
-  max-height: 30vh;
-  width: 5vw;
-  max-width:20vw;
+  height:200px;
+  width: 120px;
+  /* min-height: 200px;
+  max-height: 30vh; */
+  /* width: 7vw; */
+  /* min-width :120px;
+  max-width:20vw; */
 }
 
 .checkin-step.current {
@@ -60,7 +110,6 @@ display: flex;
 
 .desc{
   height: 100px;
-  /* font-size: 1.5em; */
         display: flex;
         justify-content: center;
     align-items: center;
@@ -70,9 +119,14 @@ display: flex;
   margin:auto;
 }
 
+.desc p{
+  font-size:.8em;
+}
+
 .checkin-options{
         display: flex;
           flex-direction: column;
+            height: 70px;
 }
 
 .checkin-options button{
@@ -80,7 +134,7 @@ display: flex;
 }
 
 .sub{
-         margin-top: 45vh;
+         /* margin-top: 45vh; */
                display: flex;
         justify-content: center;
 
