--- a/react-app/src/components/CheckInModal/CheckInModal.css
+++ b/react-app/src/components/CheckInModal/CheckInModal.css
@@ -8,7 +8,7 @@
 
 .checkin-form-container{
   padding: 3% 6%;
- perspective: 1000px;
+ /* perspective: 1000px; */
     display: flex;
     flex-direction: column;
      height:75vh;
@@ -66,47 +66,48 @@
   }
 }
 
+/* carousel/card container */
+.checkin-steps-container{
+  width: 170px;
+  height: 220px;
+  position: relative;
+    margin: 40px auto;
+  perspective: 1000px;
+}
+
 /* carousel */
-.habit-steps-container {
+.carousel {
     width: 100%;
   height: 100%;
-  display: block;
+  position:absolute;
   transform-style: preserve-3d;
-  /* next two lines made horizantal scroll (before switched to carousel) */
-  /* overflow-x: auto;
-  white-space: nowrap; */
-display: flex;
-  justify-content: center;
-/* padding:2%; */
-margin:auto;
 }
 
 /* card */
 .checkin-step {
-    display: block;
   position: absolute;
-  margin:auto;
-  padding: 10px 20px;
-  border: 1px solid #ddd;
+  width: 150px;
+  height: 200px;
+  left: 10px;
+  top: 10px;
+  border: 1px solid #E8DEF8;
   border-radius: 20px;
-  background-color: #f9f9f9;
-   transform-origin: center center;
+  background-color:#F8F3FF;
   transition: transform 1s ease, opacity 0.8s ease;
   opacity: 0.6;
   z-index:2;
-  height:200px;
-  width: 120px;
-  /* min-height: 200px;
-  max-height: 30vh; */
-  /* width: 7vw; */
-  /* min-width :120px;
-  max-width:20vw; */
+  box-shadow: 7px 9px  #CDAEFF;
 }
 
 .checkin-step.current {
   z-index: 5;
   opacity: 1;
+    border: 1px solid #E8DEF8;
+  background-color:#F8F3FF;
+    box-shadow: 7px 9px #350079;
 }
+
+
 
 .desc{
   height: 100px;
@@ -127,19 +128,20 @@ margin:auto;
         display: flex;
           flex-direction: column;
             height: 70px;
+            padding: 4%
 }
 
 .checkin-options button{
           margin: 3%;
+          background-color: #E8DEF8;
 }
 
 .sub{
-         /* margin-top: 45vh; */
-               display: flex;
+        display: flex;
         justify-content: center;
-
 }
 
 .sub button{
           font-size: 1.8em;
+            background-color: #E8DEF8;
 }
