--- a/react-app/src/components/CheckInModal/CheckInModal.css
+++ b/react-app/src/components/CheckInModal/CheckInModal.css
@@ -3,8 +3,8 @@
             box-shadow: 7px 9px #350079;
                 min-width:70vw;
     max-width: 90vw;
+       overflow-y:scroll;
 }
-
 
 .checkin-form-container{
   padding: 3% 6%;
@@ -14,7 +14,6 @@
      height:75vh;
            min-width:65vw;
 }
-
 
 /* general h2/button font rules */
 .checkin-form-container h2{
@@ -68,8 +67,8 @@
 
 /* carousel/card container */
 .checkin-steps-container{
-  width: 170px;
-  height: 220px;
+  width: 160px;
+  height: 210px;
   position: relative;
     margin: 40px auto;
   perspective: 1000px;
@@ -86,17 +85,17 @@
 /* card */
 .checkin-step {
   position: absolute;
-  width: 150px;
-  height: 200px;
-  left: 10px;
-  top: 10px;
+  width: 130px;
+  height: 180px;
+  left: 15px;
+  top: 15px;
   border: 1px solid #E8DEF8;
   border-radius: 20px;
   background-color:#F8F3FF;
   transition: transform 1s ease, opacity 0.8s ease;
   opacity: 0.6;
   z-index:2;
-  box-shadow: 7px 9px  #CDAEFF;
+  box-shadow: 2px 4px  #CDAEFF;
 }
 
 .checkin-step.current {
@@ -104,7 +103,7 @@
   opacity: 1;
     border: 1px solid #E8DEF8;
   background-color:#F8F3FF;
-    box-shadow: 7px 9px #350079;
+    box-shadow: 2px 4px #350079;
 }
 
 
