--- a/react-app/src/components/UserProfile/UserProfile.css
+++ b/react-app/src/components/UserProfile/UserProfile.css
@@ -128,6 +128,7 @@ color: #058789;
 .usersec3{
     justify-content: center;
     text-align: center;
+    margin-bottom:5%;
 }
 
 .routine-section{
@@ -150,10 +151,13 @@ color: #058789;
     }
 }
 
+@media (max-width: 768px) {
+    .routine-tile{
+             margin:40px -30px 40px auto;
+    }
+}
 
-/* .routine-img{
-        margin: auto;
-} */
+
 .routine-tile img{
 height: 175px;
 width: 250px;
@@ -179,6 +183,33 @@ justify-content: center;
 .routine-buttons button{
     margin:20px;
 }
+
+@media (max-width: 580px) {
+.routine-section{
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+      justify-content: center;
+      align-items: center;
+}
+.usersec3 h1{
+    margin-bottom:13%;
+}
+    .routine-tile{
+             margin: auto;
+    }
+.routine-buttons{
+    display:flex;
+    flex-direction: row;
+    margin:6% 0 15% 0;
+}
+.routine-buttons button{
+   width:100px;
+   margin: 5px;
+   font-size: 1em;
+}
+}
+
 .bubble{
     background-color: white;
     border-radius:20px;
