--- a/react-app/src/components/HomePage/HomePage.css
+++ b/react-app/src/components/HomePage/HomePage.css
@@ -11,12 +11,12 @@
 
 
 .wave-1{
-/* background-image: url( '52.svg' ); */
-width: 100vw;
-padding:0;
-margin: -7% 0 0 0;
-position:relative;
+width: 110vw;
+overflow:hidden;
+margin-top: -120px;
+margin-left: -20px;
 z-index: 3;
+justify-content: center;
 }
 
 .slogan{
