--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -20,7 +20,8 @@ button{
 
 @font-face {
   font-family: bobbyJones;
-  src: url('./font/BobbyJonesSoft.otf') format("opentype");
+    src: url('./font/BobbyJonesSoft.woff2') format("woff2");
+  /* src: url('./font/BobbyJonesSoft.otf') format("opentype"); */
   /* font-weight: 300 800; */
   font-style: normal;
 }
