--- a/react-app/src/components/Community/Community.css
+++ b/react-app/src/components/Community/Community.css
@@ -124,3 +124,44 @@ margin: 1%;
   height: auto;
   display: block;
 }
+
+.community-habits-container {
+  display: flex;
+  overflow-x: auto;
+  white-space: nowrap;
+  padding: 16px;
+}
+
+.habitcard {
+  flex: 0 0 auto;
+  margin-right: 16px;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+}
+
+
+.habitcard .desc {
+  padding: 8px;
+}
+
+.habitcard .routine-options {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 8px;
+}
+
+.routine-button {
+  box-shadow: 4px 6px #058789;
+  background-color: white;
+  border: none;
+  padding: 8px 16px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 14px;
+  cursor: pointer;
+  border-radius: 15px;
+  margin: 10px 4px;
+}
