--- a/react-app/src/components/Community/Community.css
+++ b/react-app/src/components/Community/Community.css
@@ -31,6 +31,7 @@ justify-content: center;
   text-align: right;
  display: flex;
   justify-content: flex-end;
+  flex-direction: column;
   position: relative;
   z-index: 5;
   font-size: 3vw;
@@ -38,8 +39,10 @@ justify-content: center;
 
 .feed h2{
   max-width: 30ch;
- /* display: flex;
-  justify-content: flex-end; */
+  margin:0 0 0 auto;
+ display: flex;
+  justify-content: flex-end;
+  white-space: nowrap;
 }
 
 .write-community{
@@ -57,6 +60,7 @@ justify-content: center;
   /* color:   #680416; */
   cursor: pointer;
     background-color:white;
+    padding:0
   }
 
   .pencil-community{
@@ -86,9 +90,26 @@ justify-content: center;
        border-radius: 20px;
 }
 
-/* .post-user{
-
+@media (max-width: 620px) {
+/* .home-posts-container{
+    width: 90%;
 } */
+.post-tile{
+       margin: 20px;
+}
+}
+@media (max-width: 440px) {
+.post-tile{
+       margin: 20px auto;
+       width: 260px;
+              padding:20px;
+}
+}
+@media (max-width: 340px) {
+.post-tile{
+              padding:10px;
+}
+}
 
 .post-img{
  height: 195px;
@@ -132,10 +153,14 @@ margin: 1%;
     flex-basis: 20%;
   }
 }
+
+.checkitouttt{
+  margin-top:40px;
+}
 .community-habits-container {
   display: flex;
   overflow-x: auto;
-  white-space: nowrap;
+  /* white-space: nowrap; */
   padding: 16px;
   margin-bottom:40px;
 }
