--- a/react-app/src/components/Navigation/Profile.css
+++ b/react-app/src/components/Navigation/Profile.css
@@ -8,6 +8,14 @@
   cursor: pointer;
     width: 100px;
 }
+@media (max-width: 350px) {
+.happy-user{
+  right: 5px;
+  top: 15px;
+  cursor: pointer;
+    width: 80px;
+}
+}
 
 .profile-dropdown {
   display: flex;
