--- a/react-app/src/components/UserProfile/UserProfile.css
+++ b/react-app/src/components/UserProfile/UserProfile.css
@@ -227,3 +227,68 @@ justify-content: center;
 
   /* font-family: Jost, Futura, Helvetica, Arial, sans-serif;
   font-family: bobbyJones, Animatic SC, Helvetica cursive; */
+
+
+  /* @keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+} */
+
+.no-user {
+  display: flex;
+align-items: center;
+justify-content: center;
+margin: 200px;
+}
+
+
+@keyframes dot-spin {
+  0%, 100% {
+  box-shadow: 0 -36px 0 0 #9880ff, 25.455852px -25.455852px 0 0 #9880ff, 36px 0 0 0 #9880ff, 25.455852px 25.455852px 0 -5px rgba(152, 128, 255, 0), 0 36px 0 -5px rgba(152, 128, 255, 0), -25.455852px 25.455852px 0 -5px rgba(152, 128, 255, 0), -36px 0 0 -5px rgba(152, 128, 255, 0), -25.455852px -25.455852px 0 -5px rgba(152, 128, 255, 0);
+  }
+  12.5% {
+    box-shadow: 0 -36px 0 -5px rgba(152, 128, 255, 0), 25.455852px -25.455852px 0 0 #9880ff, 36px 0 0 0 #9880ff, 25.455852px 25.455852px 0 0 #9880ff, 0 36px 0 -5px rgba(152, 128, 255, 0), -25.455852px 25.455852px 0 -5px rgba(152, 128, 255, 0), -36px 0 0 -5px rgba(152, 128, 255, 0), -25.455852px -25.455852px 0 -5px rgba(152, 128, 255, 0);
+  }
+  25% {
+    box-shadow: 0 -36px 0 -5px rgba(152, 128, 255, 0), 25.455852px -25.455852px 0 -5px rgba(152, 128, 255, 0), 36px 0 0 0 #9880ff, 25.455852px 25.455852px 0 0 #9880ff, 0 36px 0 0 #9880ff, -25.455852px 25.455852px 0 -5px rgba(152, 128, 255, 0), -36px 0 0 -5px rgba(152, 128, 255, 0), -25.455852px -25.455852px 0 -5px rgba(152, 128, 255, 0);
+  }
+
+  37.5% {
+    box-shadow: 0 -36px 0 -5px rgba(152, 128, 255, 0), 25.455852px -25.455852px 0 -5px rgba(152, 128, 255, 0), 36px 0 0 -5px rgba(152, 128, 255, 0), 25.455852px 25.455852px 0 0 #9880ff, 0 36px 0 0 #9880ff, -25.455852px 25.455852px 0 0 #9880ff, -36px 0 0 -5px rgba(152, 128, 255, 0), -25.455852px -25.455852px 0 -5px rgba(152, 128, 255, 0);
+  }
+
+  50% {
+    box-shadow: 0 -36px 0 -5px rgba(152, 128, 255, 0), 25.455852px -25.455852px 0 -5px rgba(152, 128, 255, 0), 36px 0 0 -5px rgba(152, 128, 255, 0), 25.455852px 25.455852px 0 -5px rgba(152, 128, 255, 0), 0 36px 0 0 #9880ff, -25.455852px 25.455852px 0 0 #9880ff, -36px 0 0 0 #9880ff, -25.455852px -25.455852px 0 -5px rgba(152, 128, 255, 0);
+  }
+  62.5% {
+    box-shadow: 0 -36px 0 -5px rgba(152, 128, 255, 0), 25.455852px -25.455852px 0 -5px rgba(152, 128, 255, 0), 36px 0 0 -5px rgba(152, 128, 255, 0), 25.455852px 25.455852px 0 -5px rgba(152, 128, 255, 0), 0 36px 0 -5px rgba(152, 128, 255, 0), -25.455852px 25.455852px 0 0 #9880ff, -36px 0 0 0 #9880ff, -25.455852px -25.455852px 0 0 #9880ff;
+  }
+
+  75% {
+    box-shadow: 0 -36px 0 0 #9880ff, 25.455852px -25.455852px 0 -5px rgba(152, 128, 255, 0), 36px 0 0 -5px rgba(152, 128, 255, 0), 25.455852px 25.455852px 0 -5px rgba(152, 128, 255, 0), 0 36px 0 -5px rgba(152, 128, 255, 0), -25.455852px 25.455852px 0 -5px rgba(152, 128, 255, 0), -36px 0 0 0 #9880ff, -25.455852px -25.455852px 0 0 #9880ff;
+  }
+
+  87.5% {
+    box-shadow: 0 -36px 0 0 #9880ff, 25.455852px -25.455852px 0 0 #9880ff, 36px 0 0 -5px rgba(152, 128, 255, 0), 25.455852px 25.455852px 0 -5px rgba(152, 128, 255, 0), 0 36px 0 -5px rgba(152, 128, 255, 0), -25.455852px 25.455852px 0 -5px rgba(152, 128, 255, 0), -36px 0 0 -5px rgba(152, 128, 255, 0), -25.455852px -25.455852px 0 0 #9880ff;
+  }
+}
+
+.dot-spin {
+  position: relative;
+  width: 20px;
+  height: 20px;
+  border-radius: 10px;
+  background-color: transparent;
+  color: transparent;
+box-shadow: 0 -36px 0 0 #9880ff, 25.455852px -25.455852px 0 0 #9880ff, 36px 0 0 0 #9880ff, 25.455852px 25.455852px 0 0 rgba(152, 128, 255, 0), 0 36px 0 0 rgba(152, 128, 255, 0), -25.455852px 25.455852px 0 0 rgba(152, 128, 255, 0), -36px 0 0 -5px rgba(152, 128, 255, 0), -25.455852px -25.455852px 0 -5px rgba(152, 128, 255, 0);
+  animation: dot-spin 1.5s infinite linear;
+}
+
+.loading h3{
+  display:flex;
+justify-content: center;
+}
