--- a/react-app/src/components/Community/Community.css
+++ b/react-app/src/components/Community/Community.css
@@ -121,6 +121,19 @@ justify-content: center;
 /* .post-content{
 
 } */
+.postrow {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+ background-color: white;
+ border-radius: 25px;
+text-align: center;
+margin-bottom: 10px;
+}
+
+.postrow button{
+ background-color: white;
+}
 
 .topics-container-one-row{
     display: flex;
